New World additions and more
- Added new sub cultures for Elysian and Vinlander
- New Decision for ERE to give black sea colonies to taurica
- Secret goal adjusts
- Italian diplo adjusts
- Change Religion decisions changes
- minor bug fixes

--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -22,7 +22,10 @@
 
  #Colonial Cultures todo come up with unique names.
  elysian: "Elysian"
+ latinikoi: "Latinikoi"
+ elyrics: "Elyrics"
  vinlander: "Vinlander"
+ skraeling: "Skraeling"
  apoikoi: "Apoikoi"
  colonial_french: "Colonial-French"
  colonial_italian: "Colonial-Italian"
@@ -53,3 +56,4 @@
  #Discrimination traits
  greco_roman_heritage: "Romaiokratía"
  colonial_heritage: "Colonial"
+ elysian_heritage: "Elysian"
