--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -21,6 +21,8 @@
  romaioi_eastarm_decision_desc: "The lands of "Arevelyan" are rightfully Armenian and should be restored as such."
  romaioi_eastmespotamia_decision: "Create Exarchate of Mespotamia"
  romaioi_eastmespotamia_decision_desc: "The Pronia of Mespotamia is well suited to absord the Assyrian state and as such should be made into a full Exarchate."
+ romaioi_expand_taurica_decision: "Expand Taurica"
+ romaioi_expand_taurica_decision_desc: "Taurica is well suited to absord the Black Sea Colonies."
 
  notbyz_themata_decision: "Themata Primacy"
  notbyz_themata_decision_desc: "Themata are the main regional military divisions of the Basileía Romaíon, established during the 9th century CE. The Basileía Romaíon is divided into many themata, each with its own governor, military commander and garrison. The main purpose of themata is to provide a means of defense against the empire's enemies. Each thema is responsible for the defense of a specific geographic area and has its own army. The soldiers are mainly local men, who are conscripted and trained for military service. The themata system allows the Basileía Romaíon to have a more flexible military structure, which can adapt to the changing threats and challenges it faces."
