--- a/localization/english/br_religion_l_english.yml
+++ b/localization/english/br_religion_l_english.yml
@@ -49,12 +49,12 @@
  #Religious decisions
 
  hellenic_decision: "Hellenic Revival"
- hellenic_decision_desc: "@warning! This decision changes your state religion and greatly angers the majority of your population. (Will write fun RP Story here later)"
+ hellenic_decision_desc: "@warning! This decision changes your state religion and greatly angers the the non Plethonist population."
  orthodox_decision: "Reestablish State Orthodoxy"
- orthodox_decision_desc: "@warning! This decision changes your state religion and greatly angers the majority of your population."
+ orthodox_decision_desc: "@warning! This decision changes your state religion and greatly angers the non Orthodox members of the population."
 
  elysian_orthodox_decision: "Turn back to the Elysian Orthodox faith"
- elysian_orthodox_decision_desc: "@warning! This decision changes your state religion and greatly angers Hellenic population that doesn't convert."
+ elysian_orthodox_decision_desc: "@warning! This decision changes your state religion and greatly angers the Plethonist population that doesn't convert."
 
  revive_khazer_khanate_decision: "Revive the Khazar Khaganate"
  revive_khazer_khanate_decision_desc: "Jews from both the Islamic world and Basileía Romaíon are known to have migrated to Tartaria during periods of persecution under Heraclius, Justinian II, Leo III, and Romanus Lakapēnos. For Simon Schama, Jewish communities from the Balkans and the Bosphoran Crimea, especially from Panticapaeum, began migrating to the more hospitable climate of pagan Tartaria in the wake of these persecutions, and were joined there by Jews from Armenia. The Geniza fragments, he argues, make it clear the Judaising reforms sent roots down into the whole of the population. The pattern is one of an elite conversion preceding large-scale adoption of the new religion by the general population, which often resisted the imposition. One important condition for mass conversion was a settled urban state, where churches, synagogues or mosques provided a focus for religion, as opposed to the free nomadic lifestyle of life on the open steppes."
@@ -63,19 +63,19 @@
  sunni_decision_desc: "The Islamic religion has been spreading though out our realm, already the majority of the population has embraced it."
 
  zoroastrianism_decision: "Return to Zoroastrianism"
- zoroastrianism_decision_desc: "Perhaps it is time to return to our ancient roots and embrace Zoroastrianism."
+ zoroastrianism_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace Zoroastrianism."
 
  norse_decision: "Return to the Norse faith"
- norse_decision_desc: "Perhaps it is time to return to our ancient roots and embrace the Norse faith."
+ norse_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Norse faith."
 
  baltic_decision: "Return to the Baltic faith"
- baltic_decision_desc: "Perhaps it is time to return to our ancient roots and embrace the Baltic faith."
+ baltic_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Baltic faith."
 
  slavic_decision: "Return to the Slavic faith"
- slavic_decision_desc: "Perhaps it is time to return to our ancient roots and embrace the Slavic faith."
+ slavic_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Slavic faith."
 
  tengri_decision: "Return to the Tengri faith"
- tengri_decision_desc: "Perhaps it is time to return to our ancient roots and embrace the Tengri faith."
+ tengri_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Tengri faith."
 
  acknowledge_roman_orthodox_supremacy: "Acknowledge the supremacy of the Ecumenical Patriarchate of Konstantinopolis"
  acknowledge_roman_orthodox_supremacy_desc: "If we acknowledge the supremacy of the Ecumenical Patriarchate of Konstantinopolis over our faithful we will like gain much leverage with Basileía Romaíon, but it will come at a cost."
