New World Countries added
- Added Apaleisia Republic and Mount Aithaia as new Elysian Tags semi independent from game start.

--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -150,6 +150,10 @@
  br_new_angland_ADJ: "New Angland"
  br_louisiane: "Louisiane"
  br_louisiane_ADJ: "Louisiane"
+ br_apaleisia: "Apaleisia Republic"
+ br_apaleisia_ADJ: "Apaleisian"
+ br_aithaia: "Mount Aithaia"
+ br_aithaia_ADJ: "Aithaian"
 
  br_kham: "Kham"
  br_kham_ADJ: "Kham"
