--- a/localization/english/replace/cultures_l_english.yml
+++ b/localization/english/replace/cultures_l_english.yml
@@ -227,7 +227,7 @@
  khmu: "Khmu"
  kissi: "Kissi"
  kru: "Kru"
- mande: "Mande"
+ mande: "Mandinka"
  maures: "Maures"
  mossi: "Mossi"
  senufo: "Senufo"
