--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -18,8 +18,8 @@
  br_vinland_ADJ: "Vinlander"
  br_aegypt: "Aigyptios" #Exarchate of 
  br_aegypt_ADJ: "Aegyptian"
- br_australis: "Australis"
- br_australis_ADJ: "Australis"
+ br_australis: "Antipódeia"
+ br_australis_ADJ: "Antipódeian"
  br_afrika: "Afrika" #Exarchate of 
  br_afrika_ADJ: "Afrikan"
  br_genoa: "Genoa"
@@ -150,10 +150,10 @@
  br_new_angland_ADJ: "New Angland"
  br_louisiane: "Louisiane"
  br_louisiane_ADJ: "Louisiane"
- br_apaleisia: "Apaleisia Republic"
- br_apaleisia_ADJ: "Apaleisian"
- br_aithaia: "Mount Aithaia"
- br_aithaia_ADJ: "Aithaian"
+ br_apaleisia: "Apalaísia Republic"
+ br_apaleisia_ADJ: "Apalaísian"
+ br_aithaia: "Mount Aithaía"
+ br_aithaia_ADJ: "Aithaían"
 
  br_kham: "Kham"
  br_kham_ADJ: "Kham"
