Hyperborea, Kykladia, new coat of arms, localization and more
- New Coat of Arms for TWT and NAH when monarchy
- New Countries: Hyperborea a Varangian buffer state between Elysian and Vinland. Kykladia a small island chain in modern day Bahamas. Buildings, Pops, states, formations and countries adjusted as necessary.
- Apalesia and Aithaia made into protectorates. Also changed from colonial to unrecognized.
- Changed LAN to a colonial tag so they can be a charted company.
- Kykladian added as a new sub culture of Elysian
- Renamed various strategic regions

--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -154,6 +154,10 @@
  br_apaleisia_ADJ: "Apalaísian"
  br_aithaia: "Mount Aithaía"
  br_aithaia_ADJ: "Aithaían"
+ br_hyperborea: "Hyperborea"
+ br_hyperborea_ADJ: "Hyperborean"
+ br_kykladia: "Kykladia"
+ br_kykladia_ADJ: "Kykladian"
 
  br_kham: "Kham"
  br_kham_ADJ: "Kham"
