--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -24,6 +24,7 @@
  elysian: "Elysian"
  latinikoi: "Latinikoi"
  elyrics: "Elyrics"
+ kykladian: "Kykladian
  vinlander: "Vinlander"
  skraeling: "Skraeling"
  apoikoi: "Apoikoi"
