--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -27,6 +27,8 @@
  #BUK_ADJ: "Khorasani"
  BYZ: "Basileía Romaíon"
  BYZ_ADJ: "Romaíon"
+ HRE: "Western Europe"
+ HRE_ADJ: "Western European"
  BAD: "Thuringia"
  BAD_ADJ: "Thuringian"
  CAS: "Asturias"
@@ -176,7 +178,8 @@
  CON_ADJ: "Nêhiyawak"
  TUG: "Imazighen"
  TUG_ADJ: "Imazighen"
-
+ NAH: "Aztlán"
+ NAH_ADJ: "Aztlán"
  MNG: "Mirning"
  MNG_ADJ: "Mirning"
  
