--- a/localization/english/replace/map/strategic_regions_l_english.yml
+++ b/localization/english/replace/map/strategic_regions_l_english.yml
@@ -1,2 +1,13 @@
 ﻿l_english:
  region_dnieper: "Steppe"
+ region_canada: "Vinland"
+ region_new_england: "Hyperborea"
+ region_brazil: "Antarctique"
+ region_gran_colombia: "Gran Granada"
+ region_mexico: "Aztlan"
+ region_dixie: "Arkadías"
+ region_the_midwest: "The Midwest"
+ region_great_plains: "Great Plains"
+ region_central_america: "Maya"
+ region_caribbean: "Kykladía"
+ region_oceania: "Antipodia"
