Updates for the optionally playable American native tags plus more
- Added buildings and formations to all the optionally playable native american nations.
- merged MSC into Creek so they are a decent sized tribal nation
- Gave Dutch West Indies and Ostend Company each a small island in the West Indies with one arable land which is a sugar plantation and a small anchorage port and 5kish pops
- Added another naming decision to BR to change name to Romania.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -358,13 +358,15 @@
 
  dyn_c_re: "Roman Empire"
  dyn_c_ere: "Eastern Roman Empire"
+ dyn_c_romania: "Romania"
  dyn_c_re_adj: "Roman"
  
  ere_re_name_tt: "Name of our country will be changed to 'Roman Empire'"
  ere_ere_name_tt: "Name of our country will be changed to 'Eastern Roman Empire'"
+ ere_romania_name_tt: "Name of our country will be changed to 'Romania'"
 
  #Power Blocs
- Romaion_Bloc: "Basileía ton Romaíon" #Basileía Romaíon #Koinopolitia
+ Romaion_Bloc: "Basileía ton Romaíon" #Koinopolitia
  Imperial_HRE: "Universum Regnum"
  Venetia_Trade_League: "Lega Venezia"
  Genoa_Trade_League: "Lega Genovese"
