--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -127,9 +127,12 @@
  ere_re_name_decision: "Latinize Name: Roman Empire"
  ere_re_name_decision_desc: "Latinize our name to 'Roman Empire'"
  ere_re_name_decision_custom_tooltip: "We should use our Latin name 'Roman Empire'."
- ere_ere_name_decision: "Latinize Name: Eastern Roman Empire"
+ ere_ere_name_decision: "Latinize Name: 'Eastern Roman Empire'"
  ere_ere_name_decision_desc: "Latinize our name to 'Eastern Roman Empire'"
  ere_ere_name_decision_custom_tooltip: "We should use our full Latin name 'Eastern Roman Empire'."
+ ere_romania_name_decision: "Latinize Name: 'Romania'"
+ ere_romania_name_decision_desc: "Latinize our name to 'Romania'"
+ ere_romania_name_decision_custom_tooltip: "We should use our Latin name 'Romania'."
  
  #Government Decisions
  abolish_feudalism_decision: "Abolish Feudalism"
