--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -158,6 +158,8 @@
  br_hyperborea_ADJ: "Hyperborean"
  br_kykladia: "Kykladia"
  br_kykladia_ADJ: "Kykladian"
+ CAH: "Cahokia"
+ CAH_ADJ: "Cahokian"
 
  br_kham: "Kham"
  br_kham_ADJ: "Kham"
