--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -24,10 +24,11 @@
  elysian: "Elysian"
  latinikoi: "Latinikoi"
  elyrics: "Elyrics"
- kykladian: "Kykladian
+ kykladian: "Kykladian"
  vinlander: "Vinlander"
  skraeling: "Skraeling"
  apoikoi: "Apoikoi"
+ cahokian: "Cahokian"
  colonial_french: "Colonial-French"
  colonial_italian: "Colonial-Italian"
  colonial_german: "Colonial-German"
