--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -213,6 +213,8 @@
  je_br_gain_independence_reason: "Gain our Independence"
  je_br_east_indies_trade: "Control trade in the East Indies"
  je_br_east_indies_trade_reason: "Control trade in the East Indies"
+ je_br_west_indies_trade: "Control trade in the West Indies"
+ je_br_west_indies_trade_reason: "Control trade in the West Indies"
  je_control_nile: "Control Nile"
  je_control_nile_reason: "Control Nile"
  je_restore_russia: "Restore Russia"
