--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -48,6 +48,10 @@
  br_modifier_autonomous_march: "Autonomous March"
  br_modifier_independent_new_world_colony: "Independent Colony"
  br_modifier_spice_trade: "Spice Trade"
+ br_modifier_sugar_trade: "Sugar Trade"
+ br_modifier_sugar_monopoly: "Sugar Monopoly"
+ br_modifier_indies_piracy: "Indies Piracy" 
+ br_modifier_indies_piracy_victim: "Indies Piracy Victim"
 
  #North Sea/ Baltic
  br_modifier_norse_military_doctrine_2: "Reformerade Svenska Armén"
