--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -2177,8 +2177,8 @@
  HUB_NAME_STATE_GEORGIA_farm: "St Isidore"
  HUB_NAME_STATE_GEORGIA_wood: "Dreux"
  HUB_NAME_STATE_FLORIDA_city: "Tallahassee"
- HUB_NAME_STATE_FLORIDA_port: "Tampa"
- HUB_NAME_STATE_FLORIDA_mine: "Fort Pierce"
+ HUB_NAME_STATE_FLORIDA_port: "Tylousa"
+ HUB_NAME_STATE_FLORIDA_mine: "Ankon"
  HUB_NAME_STATE_FLORIDA_farm: "St Augustine"
  HUB_NAME_STATE_FLORIDA_wood: "Punta Rassa"
  HUB_NAME_STATE_ALABAMA_city: "Birmingham"
@@ -2203,28 +2203,28 @@
  HUB_NAME_STATE_TEXAS_wood: "Dallas"
  HUB_NAME_STATE_OKLAHOMA_city: "Tulsa"
  HUB_NAME_STATE_OKLAHOMA_mine: "Idabel"
- HUB_NAME_STATE_OKLAHOMA_farm: "Oklahoma City"
+ HUB_NAME_STATE_OKLAHOMA_farm: "Oklahoma"
  HUB_NAME_STATE_OKLAHOMA_wood: "McAlester"
  HUB_NAME_STATE_ARKANSAS_city: "Little Rock"
  HUB_NAME_STATE_ARKANSAS_mine: "Fort Smith"
  HUB_NAME_STATE_ARKANSAS_farm: "Pine bluff"
  HUB_NAME_STATE_ARKANSAS_wood: "Hot Springs"
- HUB_NAME_STATE_MISSOURI_city: "St Louis"
+ HUB_NAME_STATE_MISSOURI_city: "Cahokia"
  HUB_NAME_STATE_MISSOURI_mine: "Springfield"
- HUB_NAME_STATE_MISSOURI_farm: "Jefferson City"
+ HUB_NAME_STATE_MISSOURI_farm: "Jefferson"
  HUB_NAME_STATE_MISSOURI_wood: "Cape Girardeau"
  HUB_NAME_STATE_KANSAS_city: "Wichita"
  HUB_NAME_STATE_KANSAS_mine: "Fort Scott"
  HUB_NAME_STATE_KANSAS_farm: "Topeka"
- HUB_NAME_STATE_KANSAS_wood: "Dodge City"
+ HUB_NAME_STATE_KANSAS_wood: "Dodge"
  HUB_NAME_STATE_NEBRASKA_city: "Omaha"
  HUB_NAME_STATE_NEBRASKA_farm: "Nordfolk"
  HUB_NAME_STATE_NEBRASKA_mine: "Chadron"
  HUB_NAME_STATE_NEBRASKA_wood: "Grand Island"
  HUB_NAME_STATE_IOWA_city: "Des Moines"
  HUB_NAME_STATE_IOWA_mine: "Ottumwa"
- HUB_NAME_STATE_IOWA_farm: "Iowa City"
- HUB_NAME_STATE_IOWA_wood: "Mason City"
+ HUB_NAME_STATE_IOWA_farm: "Iowa"
+ HUB_NAME_STATE_IOWA_wood: "Mason"
  HUB_NAME_STATE_MINNESOTA_city: "Minneapolis"
  HUB_NAME_STATE_MINNESOTA_mine: "Duluth"
  HUB_NAME_STATE_MINNESOTA_farm: "Saint Cloud"
@@ -2665,15 +2665,15 @@
  HUB_NAME_STATE_CUBA_mine: "Guantanamo"
  HUB_NAME_STATE_CUBA_farm: "Puerto Príncipe"
  HUB_NAME_STATE_CUBA_wood: "Santa Clara"
- HUB_NAME_STATE_BAHAMAS_city: "Congo Town"
- HUB_NAME_STATE_BAHAMAS_port: "Nassau"
+ HUB_NAME_STATE_BAHAMAS_city: "Rhogadia"
+ HUB_NAME_STATE_BAHAMAS_port: "Pytheapolis"
  HUB_NAME_STATE_BAHAMAS_mine: "NAME"
- HUB_NAME_STATE_BAHAMAS_farm: "Nicholls Town"
+ HUB_NAME_STATE_BAHAMAS_farm: "Ikos"
  HUB_NAME_STATE_BAHAMAS_wood: "Andros Town"
- HUB_NAME_STATE_HAITI_city: "Cap-Haïtien"
- HUB_NAME_STATE_HAITI_port: "Port-au-Prince"
+ HUB_NAME_STATE_HAITI_city: "Hekoubei"
+ HUB_NAME_STATE_HAITI_port: "Neo Syrakousa"
  HUB_NAME_STATE_HAITI_mine: "Cornillon"
- HUB_NAME_STATE_HAITI_farm: "Jacmel"
+ HUB_NAME_STATE_HAITI_farm: "Axima"
  HUB_NAME_STATE_HAITI_wood: "Les Cayes"
  HUB_NAME_STATE_SANTO_DOMINGO_city: "Santiago De Los Caballeros"
  HUB_NAME_STATE_SANTO_DOMINGO_port: "Santo Domingo"
