124/J - fixes and additions
- Coat of Arm revamps for Ven and Gen Subjects
- Added accepted birth rate mult back into mod.
- Fixes to states and Pops
- Added Missing culture modifiers
- Addition to sewage tech
- Localization fixes

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -182,6 +182,7 @@
  state_trait_canada_forest: "Forests of the Great North"
  state_trait_caribbean_islands: "Caribbean Islands"
  state_trait_yemeni_coffee: "Yemeni Coffee"
+ state_trait_thessalian_plain: "Thessalian Plain"
 
  automatic_irrigation_building_spices_plantation: "Automatic Irrigation"
  default_building_spices_plantation: "Basic Production"
