--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -182,16 +182,16 @@
  modifier_popular_emperor_desc: "This Ruler is revered by the people."
  autocephalous_patriarchate_alexandria: "Patriarchate of Alexandria"
  autocephalous_patriarchate_alexandria_desc: "Patriarchate"
- autocephalous_patriarchate_ani: "Autocephalous Church of Ani"
- autocephalous_patriarchate_ani_desc: "Autocephalous Church"
- autocephalous_patriarchate_tblisi: "Autocephalous Church of Tblisi"
- autocephalous_patriarchate_tblisi_desc: "Autocephalous Church"
- autocephalous_patriarchate_moscow: "Autocephalous Church of Moscow"
- autocephalous_patriarchate_moscowa_desc: "Autocephalous Church"
+ autocephalous_patriarchate_ani: "Autocephalous Patriarchate of Armenia"
+ autocephalous_patriarchate_ani_desc: "Autocephalous Patriarchate"
+ autocephalous_patriarchate_tblisi: "Autocephalous Patriarchate of Georgia"
+ autocephalous_patriarchate_tblisi_desc: "Autocephalous Patriarchate"
+ autocephalous_patriarchate_moscow: "Autocephalous Patriarchate of Moscow"
+ autocephalous_patriarchate_moscowa_desc: "Autocephalous Patriarchate"
  autocephalous_patriarchate_elysium: "Autocephalous Church of Elysium"
  autocephalous_patriarchate_elysium_desc: "Autocephalous Church"
- autocephalous_patriarchate_belgrade: "Autocephalous Church of Belgrade"
- autocephalous_patriarchate_belgrade_desc: "Autocephalous Church"
+ autocephalous_patriarchate_belgrade: "Autocephalous Patriarchate of Serbia"
+ autocephalous_patriarchate_belgrade_desc: "Autocephalous Patriarchate"
  autocephalous_patriarchate_assyria: "Assyrian Church"
  autocephalous_patriarchate_assyria_desc: "Assyrian Church"
 
