--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -75,19 +75,19 @@
  br_ardalan: "Ardalan"
  br_ardalan_ADJ: "Ardalani"
  br_kyrenaica: "Kyrenaica"
- br_kyrenaica_ADJ: "Kyrenaica"
+ br_kyrenaica_ADJ: "Kyrenaican"
  br_pisa: "Pisa"
  br_pisa_ADJ: "Pisan"
  br_dalmatia: "Dalmatia"
  br_dalmatia_ADJ: "Dalmatian"
  br_ragusta: "Ragusta"
  br_ragusta_ADJ: "Ragustan"
- br_albania: "Dyrrhachion"
- br_albania_ADJ: "Dyrrhachion"
- br_bulgaria: "Bulgaria"
- br_bulgaria_ADJ: "Bulgarian"
- br_syria: "Syria"
- br_syria_ADJ: "Syrian"
+ br_albania: "Dyrráchion"
+ br_albania_ADJ: "Dyrráchion"
+ br_bulgaria: "Moisía"
+ br_bulgaria_ADJ: "Moisían"
+ br_syria: "Syría"
+ br_syria_ADJ: "Syrían"
  br_circassia: "Circassia"
  br_circassia_ADJ: "Circassian"
  br_alania: "Alania"
