--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -196,7 +196,7 @@
  STATE_CONSTANTINE: "Qusantinah"
  STATE_TRIPOLI: "Tripolitania"
  STATE_LIBYAN_DESERT: "Bahr Alrimal Aleazim"
- STATE_LIBYA: "Kyrenaica"
+ STATE_LIBYA: "Kyrinaïkí"
  STATE_UPPER_EGYPT: "Thebais"
  STATE_EGYPTIAN_DESERT: "Alsahra' Albayda'"
  STATE_LOWER_EGYPT: "Aigyptos"
