--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -162,8 +162,8 @@
  MAL_ADJ: "Malian"
  OCC: "Aquitaine"
  OCC_ADJ: "Aquitaine"
- EOT: "Emirate of Damascus"
- EOT_ADJ: "Damascus"
+ SYR: "Emirate of Damascus"
+ SYR_ADJ: "Damascus"
  LEB: "Lebanon"
  LEB_ADJ: "Lebanese"
  DEI: "Dutch East Indies"
