--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -42,7 +42,7 @@
  afro_french: "Afro-French"
  afro_italian: "Afro-Italian"
  afro_andalusian: "Afro-Andalusi"
- afro_arab: "Afro-Arab" #Zanj?
+ afro_arab: "Zanji"
  afro_hellenic: "Afro-Hellene"
  afro_dutch: "Afro-Dutch"
 
