--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -105,6 +105,10 @@
  br_modifier_noble_democracy: "Noble Democracy"
  br_modifier_magnate_oligarchy: "Magnate Oligarchy"
  br_modifier_slave_to_liberty: "Slave To Liberty"
+ br_modifier_plc_army: "Armia Koronna"
+ br_modifier_hun_army: "Fekete sereg"
+ br_modifier_hussite_legacy: "Hussite Legacy"
+
 
  #HRE
  br_modifier_peoples_monarchy: "The People’s Monarchy"
@@ -139,6 +143,7 @@
  br_modifier_holy_warriors: "Holy Warriors"
  br_modifier_tribal_warriors: "Tribal Warriors"
  br_modifier_sahara_trade: "Trans-Sahara Trade Route"
+ br_modifier_andalusian_tolerance: "Tolerance of the Book"
 
  #China/Asia and India
  br_modifier_mandate_of_heaven: "Mandate of Heaven"
