--- a/localization/braz_por/br_modifiers_l_braz_por.yml
+++ b/localization/braz_por/br_modifiers_l_braz_por.yml
@@ -68,7 +68,7 @@
  br_modifier_roman_roads: "Romaíon Infrastructure"
  br_modifier_regional_unification: "Unified Region"
  br_modifier_anti_colonialism: "Anti-Colonialism"
- br_modifier_andalusian_discrimination: "Andalusian Discrimination"
+ br_modifier_andalusian_discrimination: "Andalusi Cultural Supremacy"
  br_modifier_andalusian_caliphate: "Caliphate"
  br_modifier_andalusian_conscription: "Improved Conscription"
  br_modifier_muslim_cultural_discrimination: "Muslim Oppression"
