--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -136,7 +136,7 @@
  #Arab/Muslim/Africa
  br_modifier_desert_culture: "Desert Culture"
  br_modifier_arab_caliphate: "Abbasid Caliphate"
- br_modifier_andalusian_discrimination: "Andalusian Discrimination"
+ br_modifier_andalusian_discrimination: "Andalusi Cultural Supremacy"
  br_modifier_andalusian_caliphate: "Caliphate"
  br_modifier_andalusian_conscription: "Improved Conscription"
  br_modifier_hajj: "Hajj"
