--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -188,7 +188,8 @@
  default_building_spices_plantation: "Basic Production"
 
  pm_financial_district_merchant_owned: "Merchant Owned"
- pm_financial_district_capitalist_owned: "Capitalst Owned"
+ pm_financial_district_capitalist_owned: "Capitalist Owned"
+ pm_organic_farming: "Organic Farming"
 
  decree_romanisation: "Romanization"
  decree_romanisation_desc: "Begin efforts to \"Romanize\" this province."
