--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -189,10 +189,6 @@
  br_ryukyu_ADJ: "Ryukyun"
  EOC: "Ostend Company"
  EOC_ADJ: "Ostend Company"
- br_mrauk: "Mrauk U"
- br_mrauk_ADJ: "Mrauk"
- br_hmong: "Hmong"
- br_hmong_ADJ: "Hmong"
 
  #Dynamic names
 
@@ -227,12 +223,32 @@
 
 
  #Decentralized nations
+  #Asia
+ br_mrauk: "Mrauk U"
+ br_mrauk_ADJ: "Mrauk"
+ br_hmong: "Hmong"
+ br_hmong_ADJ: "Hmong"
+ br_hani: "Hani"
+ br_hani_ADJ: "Hani"
+ br_bahnar: "Bahnar"
+ br_bahnar_ADJ: "Bahnar" 
+ br_degar: "Degar"
+ br_degar_ADJ: "Degar" 
+ br_dai: "Dai"
+ br_dai_ADJ: "Dai"
+ br_bru: "Bru"
+ br_bru_ADJ: "Bru"
+ br_jingpo: "Jingpo"
+ br_jingpo_ADJ: "Jingpo"
+ br_wa: "Wa"
+ br_wa_ADJ: "Wa"
+ 
+
   #Africa
  MSR: "Mascara"
  MSR_ADJ: "Mascaran"
  CNS: "Constantine"
  CNS_ADJ: "Constantine"
-
  br_fezzan: "Fezzan"
  br_fezzan_ADJ: "Fezzan"
  br_senusiyya: "Senusiyya"
