--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -355,6 +355,14 @@
  SHP_ADJ: "Sahaptin"
  WSH_ADJ: "Washoe"
  YKT_ADJ: "Yokuts"
+ br_misumalpan: "Misumalpan"
+ br_misumalpan_ADJ: "Misumalpan"
+ br_maaya: "Maaya"
+ br_maaya_ADJ: "Maaya"
+ br_lenca: "Lenca"
+ br_lenca_ADJ: "Lenca"
+ br_itza: "Itza"
+ br_itza_ADJ: "Itza"
 
 #EU4 Tribals
  DX1: "Deg Xitʼan"
