--- a/localization/english/br_religion_swap_l_english.yml
+++ b/localization/english/br_religion_swap_l_english.yml
@@ -11,6 +11,37 @@
  je_religion_swap_complete: "We have converted half our population."
 
 
+ #decision
+ br_generic_religion_swap_decision: "[GetPlayer.GetCustom('br_religion_swap_religion_loc_title')]"
+ br_generic_religion_swap_decision_desc: "[GetPlayer.GetCustom('br_religion_swap_religion_loc_desc')]"
+ br_religion_swap_to_generic_decision: "Return to the $br_religion_norse$ faith"
+ br_religion_swap_to_generic_decision_desc: "@warning! This decision will change our faith."
+ br_religion_swap_to_norse_decision: "Return to the $br_religion_norse$ faith"
+ br_religion_swap_to_norse_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Norse faith."
+
+ #events
+ #br_religion_swap_events.1
+ br_religion_swap_events.1.t: "Changing Religion"
+ br_religion_swap_events.1.d: "We are attempting to convert our population to [SCOPE.sReligion('new_state_religion').GetName]"
+ br_religion_swap_events.1.f: "We are attempting to convert our population to [SCOPE.sReligion('new_state_religion').GetName]"
+ br_religion_swap_events.1.a: "Changing Religion"
+ #br_religion_swap_events.2
+ br_religion_swap_events.2.t: "Succesfully changed religion"
+ br_religion_swap_events.2.d: "We succeeded to convert our population to [SCOPE.sReligion('new_state_religion').GetName]"
+ br_religion_swap_events.2.f: "We succeeded to convert our population to [SCOPE.sReligion('new_state_religion').GetName]"
+ br_religion_swap_events.2.a: "Succesfully changed religion"
+ #br_religion_swap_events.3
+ br_religion_swap_events.3.t: "Failed religous conversion"
+ br_religion_swap_events.3.d: "We failed to convert our population to [SCOPE.sReligion('new_state_religion').GetName]"
+ br_religion_swap_events.3.f: "We failed to convert our population to [SCOPE.sReligion('new_state_religion').GetName], and have been forced to revert to [SCOPE.sReligion('old_state_religion').GetName], now our nation is more devided than ever."
+ br_religion_swap_events.3.a: "Failed religous conversion"
+ #br_religion_swap_events.4
+ br_religion_swap_events.4.t: "New Believers"
+ br_religion_swap_events.4.d: "Some of our people have decided to convert to [SCOPE.sReligion('new_state_religion').GetName]."
+ br_religion_swap_events.4.f: "Our citizens have seen the light and enbraced our new religion."
+ br_religion_swap_events.4.a: "Praise the new believers"
+
+
 # modifiers
  br_modifier_swapping_religion: "increased conversion effort"
  br_modifier_swaped_religion_succesfully: "Succesfull conversion effort"
