added a small explanation on how to add new religions to the br_generic_religion_swap_decision
-added a small explanation on how to add new religions to the br_generic_religion_swap_decision

--- a/localization/english/br_religion_swap_l_english.yml
+++ b/localization/english/br_religion_swap_l_english.yml
@@ -14,8 +14,9 @@
  #decision
  br_generic_religion_swap_decision: "[GetPlayer.GetCustom('br_religion_swap_religion_loc_title')]"
  br_generic_religion_swap_decision_desc: "[GetPlayer.GetCustom('br_religion_swap_religion_loc_desc')]"
- br_religion_swap_to_generic_decision: "Return to the $br_religion_norse$ faith"
+ br_religion_swap_to_generic_decision: "Return to the $br_religion_placeholder$ faith"
  br_religion_swap_to_generic_decision_desc: "@warning! This decision will change our faith."
+ #specific religion swap decision loc keys
  br_religion_swap_to_norse_decision: "Return to the $br_religion_norse$ faith"
  br_religion_swap_to_norse_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Norse faith."
 
