--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -356,7 +356,8 @@
  #Laws
  law_tribal_armies: "Tribal Society"
  law_tribal_armies_desc: "A militaristic tribal society is a type of social organization characterized by a strong emphasis on military power and warfare. In such societies, warfare often plays a central role in both culture and economy."
-
+ law_mixed_army: "Mixed Military"
+ law_mixed_army_desc: "Professional Core backed up my a large reserve of feudal levies."
 
  dyn_c_re: "Roman Empire"
  dyn_c_ere: "Eastern Roman Empire"
