added two new scripted buttons
-added two new scripted buttons

--- a/localization/english/br_religion_swap_l_english.yml
+++ b/localization/english/br_religion_swap_l_english.yml
@@ -4,6 +4,13 @@
  br_religious_conversion_progress_bar: "Percent of population that is [SCOPE.sReligion('new_state_religion').GetName]"
  br_religious_conversion_progress_bar_desc: "Percent of population that is [SCOPE.sReligion('new_state_religion').GetName]"
 
+ #scripted buttons
+ je_establish_sunday_schools_button: "Establish Sunday Schools"
+ je_establish_sunday_schools_button_desc: "In order to educate our people about our religion we should establish sunday schools."
+ je_hold_religious_festivals_button: "Hold a religious festival."
+ je_hold_religious_festivals_button_desc: "We should hold religious festivals in order to make our religion more attractive to non believers."
+ br_not_already_holding_religious_festivals_tt: "We are not already holding religious festivals."
+
  #journal entries
  je_religion_swap: "Changing Religion"
  je_religion_swap_reason: "We are changing Religion"
@@ -41,6 +48,11 @@
  br_religion_swap_events.4.d: "Some of our people have decided to convert to [SCOPE.sReligion('new_state_religion').GetName]."
  br_religion_swap_events.4.f: "Our citizens have seen the light and enbraced our new religion."
  br_religion_swap_events.4.a: "Praise the new believers"
+ #br_religion_swap_events.5
+ br_religion_swap_events.5.t: "Religious Festivals"
+ br_religion_swap_events.5.d: "We are holding religious festivals."
+ br_religion_swap_events.5.f: "In order to enlighten our citizens to our new religion we are holding festivals so the word of our beautiful religion may be spread."
+ br_religion_swap_events.5.a: "Praise the new believers"
 
 
 # modifiers
