--- a/localization/english/br_religion_swap_l_english.yml
+++ b/localization/english/br_religion_swap_l_english.yml
@@ -59,6 +59,7 @@
  br_modifier_swapping_religion: "increased conversion effort"
  br_modifier_swaped_religion_succesfully: "Succesfull conversion effort"
  br_modifier_swaped_religion_failure: "Failed conversion effort"
+ br_modifier_sunday_schools: "Sunday Schools"
 
  #misc
  palaiologos_reforms_syria_egypt: "Complete another Palaiologos Reform [concept_journal_entry] by owning the following states: Lower Egypt, Middle Egypt, Upper Egypt, and Sinai."
