--- a/localization/english/br_religion_swap_l_english.yml
+++ b/localization/english/br_religion_swap_l_english.yml
@@ -24,8 +24,25 @@
  br_religion_swap_to_generic_decision: "Return to the $br_religion_placeholder$ faith"
  br_religion_swap_to_generic_decision_desc: "@warning! This decision will change our faith."
  #specific religion swap decision loc keys
- br_religion_swap_to_norse_decision: "Return to the $br_religion_norse$ faith"
- br_religion_swap_to_norse_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Norse faith."
+ br_norse_religion_swap_decision: "Return to the $br_religion_norse$ faith"
+ br_norse_religion_swap_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Norse faith."
+ br_hellenic_religion_swap_decision: "$hellenic_decision$"
+ br_hellenic_religion_swap_decision_desc: "$hellenic_decision_desc$"
+ br_orthodox_religion_swap_decision: "$orthodox_decision$"
+ br_orthodox_religion_swap_decision_desc: "$orthodox_decision_desc$"
+ br_elysian_orthodox_religion_swap_decision: "$elysian_orthodox_decision$"
+ br_elysian_orthodox_religion_swap_decision_desc: "$elysian_orthodox_decision_desc$"
+ br_zoroastrianism_religion_swap_decision: "$zoroastrianism_decision$"
+ br_zoroastrianism_religion_swap_decision_desc: "$zoroastrianism_decision_desc$"
+ br_shitte_religion_swap_decision: "Embrace Shitte Islam"
+ br_shitte_religion_swap_decision_desc: "The Islamic religion has been spreading though out our realm, already the majority of the population has embraced it. \n$br_religion_swap_to_generic_decision_desc$"
+ br_baltic_religion_swap_decision: "$baltic_decision$"
+ br_baltic_religion_swap_decision_desc: "$baltic_decision_desc$"
+ br_slavic_religion_swap_decision: "$slavic_decision$"
+ br_slavic_religion_swap_decision_desc: "$slavic_decision_desc$"
+ br_tengri_religion_swap_decision: "$tengri_decision$"
+ br_tengri_religion_swap_decision_desc: "$tengri_decision_desc$"
+
 
  #events
  #br_religion_swap_events.1
@@ -63,6 +80,19 @@
 
  #misc
  palaiologos_reforms_syria_egypt: "Complete another Palaiologos Reform [concept_journal_entry] by owning the following states: Lower Egypt, Middle Egypt, Upper Egypt, and Sinai."
+
+
+
+
+
+ ##Old loc used in the br_religion_swap_custom_loc (may later still be used)
+ br_generic_religion_swap_decision: "[GetPlayer.GetCustom('br_religion_swap_religion_loc_title')]"
+ br_generic_religion_swap_decision_desc: "[GetPlayer.GetCustom('br_religion_swap_religion_loc_desc')]"
+ br_religion_swap_to_generic_decision: "Return to the $br_religion_placeholder$ faith"
+ br_religion_swap_to_generic_decision_desc: "@warning! This decision will change our faith."
+ #specific religion swap decision loc keys
+ br_religion_swap_to_norse_decision: "Return to the $br_religion_norse$ faith"
+ br_religion_swap_to_norse_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Norse faith."
 
 
  
