--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -78,6 +78,7 @@
  br_modifier_persian_satraps: "Satrapies"
  br_modifier_persian_cultural_promotion: "Persian Cultural Promotion"
  br_modifier_silk_road: "Silk Road"
+ br_modifier_persian_army: "Qizilbash"
 
  # Italy/ Republics
  br_modifier_diplomatic_missions: "Diplomatic Missions"
@@ -153,6 +154,7 @@
  br_modifier_inward_perfection: "Inward Perfection"
  br_maratha_modifier: "Maratha Confederation"
  br_modifier_fine_china_modifier: "Fine Porcelain"
+ br_modifier_mughal_army: "Mansabdari"
  
  #JAP
  br_modifier_edo_class_system: "Edo Social Class System"
