--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -202,27 +202,11 @@
  autocephalous_patriarchate_assyria: "Assyrian Church"
  autocephalous_patriarchate_assyria_desc: "Assyrian Church"
 
-
- #country_influence_per_subject_add: "$country_influence_per_subject_add$"
- #country_influence_per_subject_desc: "$country_influence_per_subject_add_desc$"
- country_influence_per_subject_add: "@aut![Nbsp][concept_influence] per [concept_subject]"
- country_influence_per_subject_add_desc: "The amount of @aut![Nbsp][concept_influence] which is scaled by the number of [Concept('concept_subject', '$concept_subjects$')]"
-
- #country_prestige_per_subject_add: "$country_prestige_per_subject_add$"
- #country_prestige_per_subject_desc: "$country_prestige_per_subject_add_desc$"
- country_prestige_per_subject_add: "@aut![Nbsp][concept_prestige] per [concept_subject]"
- country_prestige_per_subject_add_desc: "The amount of @aut![Nbsp][concept_prestige] which is scaled by the number of [Concept('concept_subject', '$concept_subjects$')]"
- 
-
-
-
-
  # State modifiers
  br_state_modifier_city_worlds_desire_state: "City of Worlds Desire"
  br_state_modifier_magnificent_city: "Magnificent City"
  br_state_modifier_silk_road: "Silk Road"
  br_state_modifier_sahara_trade: "Trans-Sahara Trade Route"
-
  br_state_modifier_grand_port: "Grand Port"
 
 
@@ -242,6 +226,16 @@
  br_modifier_klysma_canal_toll: "Klysma Canal Toll"
  br_modifier_persian_strait_toll: "Persian Strait Toll"
 
+ #Modifiers Defenitions
+ country_influence_per_subject_add: "@aut![Nbsp][concept_influence] per [concept_subject]"
+ country_influence_per_subject_add_desc: "The amount of @aut![Nbsp][concept_influence] which is scaled by the number of [Concept('concept_subject', '$concept_subjects$')]"
+
+ country_prestige_per_subject_add: "@aut![Nbsp][concept_prestige] per [concept_subject]"
+ country_prestige_per_subject_add_desc: "The amount of @aut![Nbsp][concept_prestige] which is scaled by the number of [Concept('concept_subject', '$concept_subjects$')]"
+ 
+ state_accepted_birth_rate_mult: "Birth Rate of Accepted Pops"
+ state_accepted_birth_rate_mult_desc: "How many children of non-discriminated pops are born each year"
+
  # Goods modifiers
  goods_output_luxury_clothes_mult:0 "@luxury_clothes! Luxury Clothes output"
  goods_output_luxury_clothes_mult_desc:0 "A bonus or penalty to the amount of @luxury_clothes! Luxury Clothes produced by buildings"
@@ -256,3 +250,56 @@
  goods_output_glass_mult:0 "@glass! Glass output"
  goods_output_glass_mult_desc:0 "A bonus or penalty to the amount of @glass! Glass produced by buildings"
  
+ #Military unit modifiers
+
+ unit_combat_unit_type_lancers_offense_add: "$combat_unit_type_lancers$ $unit_offense_add$"
+ unit_combat_unit_type_lancers_offense_add_desc: "$combat_unit_type_lancers$ $unit_offense_add$"
+ unit_combat_unit_type_lancers_defense_add: "$combat_unit_type_lancers$ $unit_defense_add$"
+ unit_combat_unit_type_lancers_defense_add_desc: "$combat_unit_type_lancers$ $unit_defense_add$"
+ unit_combat_unit_type_dragoons_offense_add: "$combat_unit_type_dragoons$ $unit_offense_add$"
+ unit_combat_unit_type_dragoons_offense_add_desc: "$combat_unit_type_dragoons$ $unit_offense_add$"
+ unit_combat_unit_type_dragoons_defense_add: "$combat_unit_type_dragoons$ $unit_defense_add$"
+ unit_combat_unit_type_dragoons_defense_add_desc: "$combat_unit_type_dragoons$ $unit_defense_add$"
+ unit_combat_unit_type_hussars_offense_add: "$combat_unit_type_hussars$ $unit_offense_add$"
+ unit_combat_unit_type_hussars_offense_add_desc: "$combat_unit_type_hussars$ $unit_offense_add$"
+ unit_combat_unit_type_hussars_defense_add: "$combat_unit_type_hussars$ $unit_defense_add$"
+ unit_combat_unit_type_hussars_defense_add_desc: "$combat_unit_type_hussars$ $unit_defense_add$"
+ unit_combat_unit_type_cuirassiers_offense_add: "$combat_unit_type_cuirassiers$ $unit_offense_add$"
+ unit_combat_unit_type_cuirassiers_offense_add_desc: "$combat_unit_type_cuirassiers$ $unit_offense_add$"
+ unit_combat_unit_type_cuirassiers_defense_add: "$combat_unit_type_cuirassiers$ $unit_defense_add$"
+ unit_combat_unit_type_cuirassiers_defense_add_desc: "$combat_unit_type_cuirassiers$ $unit_defense_add$"
+
+ unit_combat_unit_type_irregular_infantry_offense_mult: "$combat_unit_type_irregular_infantry$ $unit_offense_mult$"
+ unit_combat_unit_type_irregular_infantry_offense_mult_desc: "$combat_unit_type_irregular_infantry$ $unit_offense_mult$"
+ unit_combat_unit_type_irregular_infantry_defense_mult: "$combat_unit_type_irregular_infantry$ $unit_defense_mult$"
+ unit_combat_unit_type_irregular_infantry_defense_mult_desc: "$combat_unit_type_irregular_infantry$ $unit_defense_mult$"
+
+ unit_combat_unit_type_lancers_offense_mult: "$combat_unit_type_lancers$ $unit_offense_mult$"
+ unit_combat_unit_type_lancers_offense_mult_desc: "$combat_unit_type_lancers$ $unit_offense_mult$"
+ unit_combat_unit_type_lancers_defense_mult: "$combat_unit_type_lancers$ $unit_defense_mult$"
+ unit_combat_unit_type_lancers_defense_mult_desc: "$combat_unit_type_lancers$ $unit_defense_mult$"
+ unit_combat_unit_type_dragoons_offense_mult: "$combat_unit_type_dragoons$ $unit_offense_mult$"
+ unit_combat_unit_type_dragoons_offense_mult_desc: "$combat_unit_type_dragoons$ $unit_offense_mult$"
+ unit_combat_unit_type_dragoons_defense_mult: "$combat_unit_type_dragoons$ $unit_defense_mult$"
+ unit_combat_unit_type_dragoons_defense_mult_desc: "$combat_unit_type_dragoons$ $unit_defense_mult$"
+ unit_combat_unit_type_hussars_offense_mult: "$combat_unit_type_hussars$ $unit_offense_mult$"
+ unit_combat_unit_type_hussars_offense_mult_desc: "$combat_unit_type_hussars$ $unit_offense_mult$"
+ unit_combat_unit_type_hussars_defense_mult: "$combat_unit_type_hussars$ $unit_defense_mult$"
+ unit_combat_unit_type_hussars_defense_mult_desc: "$combat_unit_type_hussars$ $unit_defense_mult$"
+ unit_combat_unit_type_cuirassiers_offense_mult: "$combat_unit_type_cuirassiers$ $unit_offense_mult$"
+ unit_combat_unit_type_cuirassiers_offense_mult_desc: "$combat_unit_type_cuirassiers$ $unit_offense_mult$"
+ unit_combat_unit_type_cuirassiers_defense_mult: "$combat_unit_type_cuirassiers$ $unit_defense_mult$"
+ unit_combat_unit_type_cuirassiers_defense_mult_desc: "$combat_unit_type_cuirassiers$ $unit_defense_mult$"
+
+ unit_combat_unit_type_cannon_artillery_defense_mult: "$combat_unit_type_cannon_artillery$ $unit_defense_mult$"
+ unit_combat_unit_type_cannon_artillery_defense_mult_desc: "$combat_unit_type_cannon_artillery$ $unit_defense_mult$"
+ unit_combat_unit_type_mobile_artillery_defense_mult: "$combat_unit_type_mobile_artillery$ $unit_defense_mult$"
+ unit_combat_unit_type_mobile_artillery_defense_mult_desc: "$combat_unit_type_mobile_artillery$ $unit_defense_mult$"
+ unit_combat_unit_type_shrapnel_artillery_defense_mult: "$combat_unit_type_shrapnel_artillery$ $unit_defense_mult$"
+ unit_combat_unit_type_shrapnel_artillery_defense_mult_desc: "$combat_unit_type_shrapnel_artillery$ $unit_defense_mult$"
+ unit_combat_unit_type_siege_artillery_defense_mult: "$combat_unit_type_siege_artillery$ $unit_defense_mult$"
+ unit_combat_unit_type_mechanized_infantry_offense_mult: "$combat_unit_type_mechanized_infantry$ $unit_offense_mult$"
+ unit_combat_unit_type_mechanized_infantry_offense_mult_desc: "$combat_unit_type_mechanized_infantry$ $unit_offense_mult$"
+ unit_combat_unit_type_light_tanks_offense_mult: "$combat_unit_type_light_tanks$ $unit_offense_mult$"
+ unit_combat_unit_type_light_tanks_offense_mult_desc: "$combat_unit_type_light_tanks$ $unit_offense_mult$"
+ unit_combat_unit_type_siege_artillery_defense_mult_desc: "$combat_unit_type_siege_artillery$ $unit_defense_mult$"
